; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/zoran/extr_zoran_device.c_clear_interrupt_counters.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/zoran/extr_zoran_device.c_clear_interrupt_counters.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zoran = type { i32, i64, i64, i64, i64, i64, i64, i64, i64, i64, i64, i64, i64, i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @clear_interrupt_counters(%struct.zoran* %0) #0 {
  %2 = alloca %struct.zoran*, align 8
  store %struct.zoran* %0, %struct.zoran** %2, align 8
  %3 = load %struct.zoran*, %struct.zoran** %2, align 8
  %4 = getelementptr inbounds %struct.zoran, %struct.zoran* %3, i32 0, i32 14
  store i64 0, i64* %4, align 8
  %5 = load %struct.zoran*, %struct.zoran** %2, align 8
  %6 = getelementptr inbounds %struct.zoran, %struct.zoran* %5, i32 0, i32 13
  store i64 0, i64* %6, align 8
  %7 = load %struct.zoran*, %struct.zoran** %2, align 8
  %8 = getelementptr inbounds %struct.zoran, %struct.zoran* %7, i32 0, i32 12
  store i64 0, i64* %8, align 8
  %9 = load %struct.zoran*, %struct.zoran** %2, align 8
  %10 = getelementptr inbounds %struct.zoran, %struct.zoran* %9, i32 0, i32 11
  store i64 0, i64* %10, align 8
  %11 = load %struct.zoran*, %struct.zoran** %2, align 8
  %12 = getelementptr inbounds %struct.zoran, %struct.zoran* %11, i32 0, i32 10
  store i64 0, i64* %12, align 8
  %13 = load %struct.zoran*, %struct.zoran** %2, align 8
  %14 = getelementptr inbounds %struct.zoran, %struct.zoran* %13, i32 0, i32 9
  store i64 0, i64* %14, align 8
  %15 = load %struct.zoran*, %struct.zoran** %2, align 8
  %16 = getelementptr inbounds %struct.zoran, %struct.zoran* %15, i32 0, i32 8
  store i64 0, i64* %16, align 8
  %17 = load %struct.zoran*, %struct.zoran** %2, align 8
  %18 = getelementptr inbounds %struct.zoran, %struct.zoran* %17, i32 0, i32 7
  store i64 0, i64* %18, align 8
  %19 = load %struct.zoran*, %struct.zoran** %2, align 8
  %20 = getelementptr inbounds %struct.zoran, %struct.zoran* %19, i32 0, i32 6
  store i64 0, i64* %20, align 8
  %21 = load %struct.zoran*, %struct.zoran** %2, align 8
  %22 = getelementptr inbounds %struct.zoran, %struct.zoran* %21, i32 0, i32 5
  store i64 0, i64* %22, align 8
  %23 = load %struct.zoran*, %struct.zoran** %2, align 8
  %24 = getelementptr inbounds %struct.zoran, %struct.zoran* %23, i32 0, i32 4
  store i64 0, i64* %24, align 8
  %25 = load %struct.zoran*, %struct.zoran** %2, align 8
  %26 = getelementptr inbounds %struct.zoran, %struct.zoran* %25, i32 0, i32 3
  store i64 0, i64* %26, align 8
  %27 = load %struct.zoran*, %struct.zoran** %2, align 8
  %28 = getelementptr inbounds %struct.zoran, %struct.zoran* %27, i32 0, i32 2
  store i64 0, i64* %28, align 8
  %29 = load %struct.zoran*, %struct.zoran** %2, align 8
  %30 = getelementptr inbounds %struct.zoran, %struct.zoran* %29, i32 0, i32 1
  store i64 0, i64* %30, align 8
  %31 = load %struct.zoran*, %struct.zoran** %2, align 8
  %32 = getelementptr inbounds %struct.zoran, %struct.zoran* %31, i32 0, i32 0
  store i32 2147483647, i32* %32, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
